# MELD_Visualizer

./: .flake8  .gitignore  .pre-commit-config.yaml  APP_GUIDE.md  CALLBACK_FIXES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CLAUDE.md.backup.20250828-084634  CLEANUP.md  ENHANCED_DESKTOP_UI_IMPLEMENTATION.md  GENERAL_CLAUDE.md  JULES.md  JULES.txt  JULES_initial_setup_v3.sh  JULES_initial_setup_v3.txt  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_REPORT.md  PR.md  PROJECT_CONTEXT.md  PR_TEMPLATE.md  PYVISTA_DISPLAY_FIXES.md  PYVISTA_MIGRATION_SUMMARY.md  README.md  RESPONSIVE_PLOT_IMPROVEMENTS.md  SECURITY_AUDIT.md  SUBAGENT_TEST_REBUILD_STRATEGY.md  TEST_SUITE_REBUILD_PLAN.md  TODO.md  VOLUME_REFACTOR_SUMMARY.md  agents.md  analyze_coverage.py  app.py  callbacks.py  cleanup_interference.bat  config.json  config.py  constants.py  coverage.json  data_processing.py  (+29 more)
.claude/: RESTRUCTURE_TEST_REPORT.md  review_output_15Aug2025_1.md  settings.local.json
.claude/context/: agent_handoff_template.md  enhanced_ui_recovery_plan.md  project_context_2025_08_20.md  quick_reference.md
.claude/tasks/onboard-2025-08-19/: onboarding.md
.context/: agent_briefing.md  agent_coordination.md  code_patterns.md  context_index.json  context_index.md  current_state.md  design_decisions.md  future_roadmap.md  project_context.md  project_overview.md  quick_reference.json  quick_reference.md
.context/context_upload/Claude Summary/: meld_gcode_claude_summary.md  meld_gcode_guide.html  meld_general_programming_summary.md
.context/context_upload/GPT5 Summary/: GPT5 Prompt Suggestions for Claude Code.txt  meld_gm_cheatsheet.html  meld_gm_claude_compact.json  meld_rest_claude_compact.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: pr01_repo_hygiene_and_ci_skeleton.md  pr03_config_validation_+_column_mapping_ui.md  pr04_performance_lod_decimator_+_payload_cap_+_slider.md  pr05_voxelization_+_isosurface_mode.md  pr06_roi_selection_+_crossfilter.md  pr07_error_panel_+_progress_cancel.md  pr08_session_save_load_+_export.md  pr09_test_suite_upgrade.md  pr10_windows_packaging_and_release_ci.md  pr11_docs_+_demo_data.md  pr12_watch_folder___live_reload_optional.md  pr13_linux_containerization_and_devcontainer_optional.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  nightly-tests.yml  test-suite.yml
CSV/: 20250707144618.csv  20250707151600.csv  20250708104310.csv  20250722163434.csv
Cleanup/: README.md  REORGANIZATION_SUMMARY.md
Cleanup/assets/: enhanced-ui.js
Cleanup/config/: volume_calibration_corrected.json
Cleanup/documentation/: AGENT_CONTEXT.json  CALLBACK_TEST_REPORT.md  QUICK_CONTEXT.md  RESPONSIVE_PLOT_VALIDATION_REPORT.md  UI_UX_Analysis_Report.md
Cleanup/temp/: performance_test.py  test_data.csv
Context/docs/: CONTINUITY_SUMMARY.md  DECISIONS.md  RUNBOOK.md  TODO.md  TROUBLESHOOTING.md  Txt Summary.txt
Context/examples/: JULES_initial_setup.sh  tests.test_suite.conf.example
callbacks/: __init__.py  config_callbacks.py  data_callbacks.py  graph_callbacks.py  visualization_callbacks.py
config/: config.json  volume_calibration.json  volume_calibration_final.json
data/csv/: 20250707144618.csv  20250707151600.csv  20250708104310.csv  20250722163434.csv
data/nc/: ZigZag Compensation.Toolpath.nc
docs/: CLAUDE.md  CLEANUP.md  CLEANUP_TAILORED.md  CONTINUITY_SUMMARY.md  DECISIONS.md  ENHANCED_UI_ARCHITECTURE.md  ENHANCED_UI_DEVELOPER_GUIDE.md  ENHANCED_UI_DOCUMENTATION.md  ENHANCED_UI_QUICK_REFERENCE.md  PERFORMANCE_REPORT.md  PR.md  RUNBOOK.md  TODO.md  TROUBLESHOOTING.md  Txt Summary.txt  VOLUME_CALCULATIONS.md  agents.md  pyvista_trame_migration.md
docs/api/: api-playground.html  openapi.yaml
docs/api_reference/: index.md
docs/architecture/: architecture.md
docs/components/: components.md
docs/developer_guide/: index.md
docs/examples/: app.py  run_tests.sh
docs/internal/: agents.md  quick_context.md  todo.md
docs/user-guide/: user-guide.md
docs/user_guide/: index.md
examples/: pyvista_demo.py  test_standalone_viewer.py  volume_calibration_example.py
reference_info/: BEAD_OVERLAP_CALIBRATION.md  meld_gcode_claude_summary.md  meld_gcode_guide.html  meld_general_programming_summary.md
reports/: data_processing_optimized.py  performance_benchmark.py
scripts/: JULES_initial_setup_v3.sh  analyze_bead_overlap.py  apply_width_calibration.py  create_pr.sh  jules_setup.sh  performance_analysis.py  pyinstaller building.txt  run_tests.sh  run_tests_fixed.sh  run_tests_with_coverage.py  test_overlap_calibration.py  tune_bead_width.py
services/: cache_service.py  data_service.py  file_service.py
src/meld_visualizer/: __init__.py  __main__.py  app.py  config.py  constants.py
src/meld_visualizer/callbacks/: __init__.py  config_callbacks.py  data_callbacks.py  enhanced_ui_callbacks.py  filter_callbacks.py  graph_callbacks.py  pyvista_callbacks.py  pyvista_simple_callbacks.py  (+2 more)
tests/: E2E_TEST_SUITE.md  INTEGRATION_TEST_ARCHITECTURE.md  INTEGRATION_TEST_SUMMARY.md  QUICK_START.md  README.md  TESTING_STRATEGY.md  conftest.py  requirements-e2e.txt  run_e2e_tests.py  run_playwright_mcp_tests.py  run_playwright_tests.py  run_tests.py  test_app_e2e.py  test_app_smoke.py  test_config_schema.py  test_data_processing.py  test_imports.py  test_integration.py  test_performance.py  test_services.py  test_suite.conf  test_validation.py  test_volume_modules.py
tests/e2e/: conftest.py  test_homepage_e2e.py  test_tabs_e2e.py
tests/integration/: test_e2e_placeholder.py  test_integration.py  test_week2_integration.py
tests/playwright/: MCP_CONFIGURATION.md  TYPESCRIPT_INTEGRATION.md  conftest.py  package.json  test_helpers.py  tsconfig.json
tests/python/: conftest.py  pytest.ini
tests/reports/: coverage.json  file_upload_tests.json  junit.xml  test_report_20250909_151007.json
tests/unit/: test_app_smoke.py  test_config_schema.py  test_constants.py  test_data_processing.py  test_imports.py  test_performance.py  test_security_fixes.py  test_services.py  test_validation.py
tools/: interactive_volume_calibration.py
(+110 files in other folders)
