[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "meld-visualizer"
version = "1.0.0"
description = "A Dash web application for visualizing 3D process data from MELD manufacturing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MELD Manufacturing Team"},
]
maintainers = [
    {name = "MELD Manufacturing Team"},
]
keywords = [
    "dash",
    "plotly", 
    "3d-visualization",
    "manufacturing",
    "meld",
    "data-visualization",
    "gcode",
    "mesh-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Dash",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.4.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
build = [
    "pyinstaller>=5.10.0",
    "auto-py-to-exe>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/gregspruce/MELD_Visualizer"
Documentation = "https://github.com/gregspruce/MELD_Visualizer/docs"
Repository = "https://github.com/gregspruce/MELD_Visualizer.git"
Issues = "https://github.com/gregspruce/MELD_Visualizer/issues"

[project.scripts]
meld-visualizer = "meld_visualizer.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meld_visualizer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/config",
    "/data",
    "/scripts",
    "README.md",
    "requirements.txt",
    "requirements-dev.txt",
]


[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | reports
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "plotly.*",
    "pandas.*",
    "numpy.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "reports",
    ".venv",
    ".tox",
    ".eggs",
    "*.egg",
]